fix: encode uri for id paths and minor fixes

--- a/frontend/src/app/features/admin/admin-create-event-page/admin-create-event-page.component.html
+++ b/frontend/src/app/features/admin/admin-create-event-page/admin-create-event-page.component.html
@@ -1,8 +1,4 @@
-<div
-  class="cool-static-container m-b-20"
-  style="word-wrap: break-word"
-  aria-hidden="true"
->
+<div class="cool-static-container m-b-20" style="word-wrap: break-word">
   <h2 class="card-title">
     {{ 'ADMIN-CREATE-EVENT.CREATE_NEW_EVENT' | translate }}
   </h2>
