--- a/frontend/src/app/features/amenities/amenities-choose-time-page/amenities-choose-time-page.component.html
+++ b/frontend/src/app/features/amenities/amenities-choose-time-page/amenities-choose-time-page.component.html
@@ -5,11 +5,7 @@
     </div>
 
     <div class="column-middle">
-      <div
-        class="cool-static-container m-b-20"
-        style="word-wrap: break-word"
-        aria-hidden="true"
-      >
+      <div class="cool-static-container m-b-20" style="word-wrap: break-word">
         <!-- If no bookings -->
         <div *ngIf="!isLoading && bookings?.length === 0">
           <div class="f-c-c-c" style="text-align: center">
