--- a/frontend/src/app/features/marketplace/marketplace-product-edit-page/marketplace-product-edit-page.component.html
+++ b/frontend/src/app/features/marketplace/marketplace-product-edit-page/marketplace-product-edit-page.component.html
@@ -17,7 +17,9 @@
         </div>
         <div class="f-c-c-c">
           <div class="f-r-c-c">
-            <span class="font-size-24">{{ "MARKETPLACE-PRODUCT-EDIT-PAGE.EDIT_LISTING" | translate }}</span>
+            <span class="font-size-24">{{
+              'MARKETPLACE-PRODUCT-EDIT-PAGE.EDIT_LISTING' | translate
+            }}</span>
           </div>
           <div class="divider w-75 mb-3"></div>
         </div>
@@ -35,7 +37,9 @@
                     formControlName="title"
                     type="text"
                     class="cool-input marketplace-input font-weight-bold"
-                    [attr.placeholder]="'MARKETPLACE-PRODUCT-EDIT-PAGE.TITLE' | translate"
+                    [attr.placeholder]="
+                      'MARKETPLACE-PRODUCT-EDIT-PAGE.TITLE' | translate
+                    "
                   />
                   <div
                     class="error pt-1"
@@ -44,7 +48,10 @@
                       listingForm.get('title')?.invalid
                     "
                   >
-                  {{ "MARKETPLACE-PRODUCT-EDIT-PAGE.TITLE_IS_REQUIRED" | translate }}
+                    {{
+                      'MARKETPLACE-PRODUCT-EDIT-PAGE.TITLE_IS_REQUIRED'
+                        | translate
+                    }}
                   </div>
                 </div>
 
@@ -53,9 +60,10 @@
                     formControlName="price"
                     type="text"
                     class="cool-input marketplace-input font-weight-bold font-size-14"
-                    [attr.placeholder]="'MARKETPLACE-PRODUCT-EDIT-PAGE.MONEY' | translate"
-                    (keyup)="formatCurrency()"
-                    (blur)="formatCurrency(true)"
+                    [attr.placeholder]="
+                      'MARKETPLACE-PRODUCT-EDIT-PAGE.MONEY' | translate
+                    "
+                    (blur)="formatCurrency()"
                   />
                   <div
                     class="error pt-1"
@@ -64,7 +72,10 @@
                       listingForm.get('price')?.invalid
                     "
                   >
-                  {{ "MARKETPLACE-PRODUCT-EDIT-PAGE.PRICE_IS_REQUIRED" | translate }}
+                    {{
+                      'MARKETPLACE-PRODUCT-EDIT-PAGE.PRICE_IS_REQUIRED'
+                        | translate
+                    }}
                   </div>
                 </div>
               </div>
@@ -94,7 +105,11 @@
                           <i class="fa fa-plus ms-2"></i>
                         </span>
                         <h3 id="add-photo-text" class="font-weight-bold">
-                          {{ "MARKETPLACE-PRODUCT-EDIT-PAGE.ADD_PHOTO" | translate }} ({{ images.length }}/3)
+                          {{
+                            'MARKETPLACE-PRODUCT-EDIT-PAGE.ADD_PHOTO'
+                              | translate
+                          }}
+                          ({{ images.length }}/3)
                         </h3>
                       </div>
                     </a>
@@ -103,7 +118,9 @@
                     class="f-c-c-c w-100 c-light-text font-weight-normal special-hover mb-3"
                     *ngIf="images.length < 3"
                   >
-                  {{ "MARKETPLACE-PRODUCT-EDIT-PAGE.SELECT_IMAGES" | translate }}
+                    {{
+                      'MARKETPLACE-PRODUCT-EDIT-PAGE.SELECT_IMAGES' | translate
+                    }}
                   </div>
 
                   <div class="upload__img-wrap">
@@ -140,7 +157,9 @@
                 formControlName="description"
                 class="cool-input marketplace-input textarea-min-max"
                 rows="5"
-                [attr.placeholder]="'MARKETPLACE-PRODUCT-EDIT-PAGE.DESCRIPTION' | translate"
+                [attr.placeholder]="
+                  'MARKETPLACE-PRODUCT-EDIT-PAGE.DESCRIPTION' | translate
+                "
               ></textarea>
               <div
                 class="error pt-1"
@@ -149,7 +168,10 @@
                   listingForm.get('description')?.invalid
                 "
               >
-              {{ "MARKETPLACE-PRODUCT-EDIT-PAGE.DESCRIPTION_IS_REQUIRED" | translate }}
+                {{
+                  'MARKETPLACE-PRODUCT-EDIT-PAGE.DESCRIPTION_IS_REQUIRED'
+                    | translate
+                }}
               </div>
 
               <select
@@ -157,9 +179,17 @@
                 class="cool-input marketplace-input font-weight-bold font-size-12"
                 id="department"
               >
-                <option value="" disabled>{{ "MARKETPLACE-PRODUCT-EDIT-PAGE.SELECT_DEPARTMENT" | translate }}</option>
+                <option value="" disabled>
+                  {{
+                    'MARKETPLACE-PRODUCT-EDIT-PAGE.SELECT_DEPARTMENT'
+                      | translate
+                  }}
+                </option>
                 <option *ngFor="let dept of departmentList" [value]="dept.self">
-                  {{ dept.displayName }}
+                  {{
+                    'MARKETPLACE-CONTROL-BAR.DEPARTMENTS.' + dept.name
+                      | translate
+                  }}
                 </option>
               </select>
 
@@ -170,7 +200,10 @@
                   listingForm.get('departmentId')?.invalid
                 "
               >
-              {{ "MARKETPLACE-PRODUCT-EDIT-PAGE.DEPARTMENT_IS_REQUIRED" | translate }}
+                {{
+                  'MARKETPLACE-PRODUCT-EDIT-PAGE.DEPARTMENT_IS_REQUIRED'
+                    | translate
+                }}
               </div>
 
               <div class="f-r-c-c w-100 font-size-16 font-weight-normal g-05">
@@ -181,8 +214,12 @@
                     class="cool-input marketplace-input font-weight-bold font-size-14"
                     id="condition"
                   >
-                    <option [value]="false">{{ "MARKETPLACE-PRODUCT-EDIT-PAGE.NEW" | translate }}</option>
-                    <option [value]="true">{{ "MARKETPLACE-PRODUCT-EDIT-PAGE.USED" | translate }}</option>
+                    <option [value]="false">
+                      {{ 'MARKETPLACE-PRODUCT-EDIT-PAGE.NEW' | translate }}
+                    </option>
+                    <option [value]="true">
+                      {{ 'MARKETPLACE-PRODUCT-EDIT-PAGE.USED' | translate }}
+                    </option>
                   </select>
                   <div
                     class="error pt-1"
@@ -191,14 +228,17 @@
                       listingForm.get('used')?.invalid
                     "
                   >
-                  {{ "MARKETPLACE-PRODUCT-EDIT-PAGE.CONDITION_IS_REQUIRED" | translate }}
+                    {{
+                      'MARKETPLACE-PRODUCT-EDIT-PAGE.CONDITION_IS_REQUIRED'
+                        | translate
+                    }}
                   </div>
                 </div>
               </div>
 
               <div class="f-c-c-c w-100 g-0">
                 <div class="f-r-c-c w-100 font-size-16 font-weight-normal g-05">
-                  {{ "MARKETPLACE-PRODUCT-EDIT-PAGE.QUANTITY" | translate }}
+                  {{ 'MARKETPLACE-PRODUCT-EDIT-PAGE.QUANTITY' | translate }}
                   <div>
                     <select
                       formControlName="quantity"
@@ -221,7 +261,10 @@
                     listingForm.get('quantity')?.invalid
                   "
                 >
-                {{ "MARKETPLACE-PRODUCT-EDIT-PAGE.QUANTITY_IS_REQUIRED" | translate }}
+                  {{
+                    'MARKETPLACE-PRODUCT-EDIT-PAGE.QUANTITY_IS_REQUIRED'
+                      | translate
+                  }}
                 </div>
               </div>
             </div>
@@ -233,7 +276,7 @@
               style="width: 200px"
               type="submit"
             >
-            {{ "MARKETPLACE-PRODUCT-EDIT-PAGE.SAVE_CHANGES" | translate }}
+              {{ 'MARKETPLACE-PRODUCT-EDIT-PAGE.SAVE_CHANGES' | translate }}
             </button>
           </div>
         </form>
