--- a/frontend/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
@@ -29,11 +29,7 @@
 </ng-template>
 
 <ng-template #noWorkersFound>
-  <div
-    class="cool-static-container m-b-20"
-    style="word-wrap: break-word"
-    aria-hidden="true"
-  >
+  <div class="cool-static-container m-b-20" style="word-wrap: break-word">
     <div class="no-posts-found">
       <i class="circle-icon fa-solid fa-magnifying-glass"></i>
       <span>{{ 'SERVICE-PROVIDERS-PAGE.COULD_NOT_FIND' | translate }}</span>
