--- a/frontend/src/app/features/service-providers/service-providers-preview/service-providers-preview.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-preview/service-providers-preview.component.html
@@ -27,7 +27,7 @@
               (click)="onProfessionClick($event, profession)"
               title="Click to filter by profession"
             >
-              {{ profession.displayName }}
+              {{ 'TAGS-FILTER-WIDGET.PROFESSIONS.' + profession.name }}
             </span>
           </ng-container>
         </div>
