--- a/frontend/src/app/features/user-profile/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/features/user-profile/user-profile-page/user-profile-page.component.html
@@ -76,7 +76,9 @@
               </div>
             </div>
 
-            <h3 class="p-b-5 f-w-600 pt-5">Preferences</h3>
+            <h3 class="p-b-5 f-w-600 pt-5">
+              {{ 'USER-PROFILE-PAGE.PREFERENCES' | translate }}
+            </h3>
             <div class="divider mb-3 mt-3"></div>
 
             <div class="row m-t-40">
